--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.4",
+    "@ant-design/pro-components": "^2.6.51",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@pbe/react-yandex-maps": "^1.2.5",
-    "antd": "^5.14.1",
+    "antd": "^5.15.3",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "cheerio": "^1.0.0-rc.12",
     "framer-motion": "^5.6.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "usestate": "^1.1.3"
   },
   "devDependencies": {
